--- a/BUILD.gn
+++ b/BUILD.gn
@@ -129,6 +129,8 @@ rtc_shared_library("libwebrtc") {
       "src/win/codecutils.cc",
       "src/win/msdkvideodecoder.h",
       "src/win/msdkvideodecoder.cc",
+      "src/win/videorendererd3d11.h",
+      "src/win/videorendererd3d11.cc",
       "src/win/msdkvideodecoderfactory.h",
       "src/win/msdkvideodecoderfactory.cc",
       "src/win/d3dnativeframe.h",
@@ -212,6 +214,12 @@ rtc_shared_library("libwebrtc") {
   }
 
   if(is_win) {
+    libs += [
+        "d3d11.lib",
+        "dxgi.lib",
+        "dxva2.lib",
+        "Dcomp.lib",
+    ]
     libs += [ "libmfx_vs2015.lib" ]
     lib_dirs = [ "src\win\lib\x64" ]
     ldflags = [
