--- a/BUILD.gn
+++ b/BUILD.gn
@@ -130,6 +130,8 @@ rtc_shared_library("libwebrtc") {
       "src/win/sysmem_allocator.h",
       "src/win/videorendererd3d11.cc",
       "src/win/videorendererd3d11.h",
+      "src/win/vp9ratecontrol.cc",
+      "src/win/vp9ratecontrol.h",
     ]
   }
 
@@ -209,6 +211,12 @@ rtc_shared_library("libwebrtc") {
     deps += [
       "../modules/audio_device:audio_device_module_from_input_and_output",
       "../modules/desktop_capture",
+    ]
+    deps += [ "//third_party/libvpx" ]
+    include_dirs += [
+      "//third_party/libvpx/source/config",
+      "//third_party/libvpx/source/config/$current_os/x64",
+      "//third_party/libvpx/source/libvpx",
     ]
   }
 
