--- a/BUILD.gn
+++ b/BUILD.gn
@@ -107,6 +107,8 @@ rtc_shared_library("libwebrtc") {
       "src/win/customizedencoderbufferhandle.h",
       "src/win/customizedframescapturer.cc",
       "src/win/customizedframescapturer.h",
+      "src/win/customizedvideoencoderproxy.cc",
+      "src/win/customizedvideoencoderproxy.h",
       "src/win/customizedvideosource.cc",
       "src/win/customizedvideosource.h",
       "src/win/d3d11_allocator.cc",
@@ -116,6 +118,8 @@ rtc_shared_library("libwebrtc") {
       "src/win/d3d_allocator.h",
       "src/win/d3dnativeframe.h",
       "src/win/deviceutils.cc",
+      "src/win/encodedvideoencoderfactory.cc",
+      "src/win/encodedvideoencoderfactory.h",
       "src/win/mediacapabilities.cc",
       "src/win/mediacapabilities.h",
       "src/win/mediautils.cc",
