--- a/BUILD.gn
+++ b/BUILD.gn
@@ -100,6 +100,9 @@ rtc_shared_library("libwebrtc") {
 
   if (is_win) {
     sources += [
+      "include/local_screen_capturer.h",
+      "src/local_screen_capturer_impl.cc",
+      "src/local_screen_capturer_impl.h",
       "src/win/base_allocator.cc",
       "src/win/base_allocator.h",
       "src/win/codecutils.cc",
