--- a/BUILD.gn
+++ b/BUILD.gn
@@ -136,6 +136,8 @@ rtc_shared_library("libwebrtc") {
     sources += [
       "include/commontypes.h",
       "include/deviceutils.h",
+      "src/customizedvideoencoderfactory.h",
+      "src/customizedvideoencoderfactory.cc",
       "include/framegeneratorinterface.h",
       "include/local_desktop_capturer.h",
       "include/videoencoderinterface.h",
